prost-unwrap-proto-tests/tests/ui/with_suffix_no_ident.stderr
error: Parameter must have 1 argument
  --> tests/ui/with_suffix_no_ident.rs:13:6
   |
13 |     .with_suffix());
   |      ^^^^^^^^^^^
